fix arrow alignment

--- a/client/components/ManagePortfolio/manage-portfolio-mobile.scss
+++ b/client/components/ManagePortfolio/manage-portfolio-mobile.scss
@@ -59,6 +59,7 @@
     table tbody {
       .trusty_portfolio_arrow_right {
         margin-left: 2.6vw;
+        margin-bottom: -1vw;
         svg {
           height: 5.7vw;
           path  {
